src/test/deca/context/invalid/custom/option/java/java3.deca
class TestJava {
    void methodJava() java("  WSTR \"toto\"");

    void methodJava2() java("  WSTR \"toto\"");
}
{
    TestJava test = new TestJava();
    TestJava test2 = new TestJava();
    te.methodJava();
    test2.methodJava2();
}